chore(less): remove obsolete bootstrap files

--- a/app/less/bootstrap.less
+++ b/app/less/bootstrap.less
@@ -1,55 +1,50 @@
-/*!
- * Bootstrap v3.0.0
- *
- * Copyright 2013 Twitter, Inc
- * Licensed under the Apache License v2.0
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Designed and built with all the love in the world by @mdo and @fat.
+/*! 
+ * This file is basically the original bootstrap.less file, with
+ * adjusted paths and without including variables.less and mixins.ess
  */
 
 // Reset
-@import "bootstrap/normalize.less";
-@import "bootstrap/print.less";
+@import "../thirdparty/bootstrap/less/normalize.less";
+@import "../thirdparty/bootstrap/less/print.less";
 
 // Core CSS
-@import "bootstrap/scaffolding.less";
-@import "bootstrap/type.less";
-@import "bootstrap/code.less";
-@import "bootstrap/grid.less";
-@import "bootstrap/tables.less";
-@import "bootstrap/forms.less";
-@import "bootstrap/buttons.less";
+@import "../thirdparty/bootstrap/less/scaffolding.less";
+@import "../thirdparty/bootstrap/less/type.less";
+@import "../thirdparty/bootstrap/less/code.less";
+@import "../thirdparty/bootstrap/less/grid.less";
+@import "../thirdparty/bootstrap/less/tables.less";
+@import "../thirdparty/bootstrap/less/forms.less";
+@import "../thirdparty/bootstrap/less/buttons.less";
 
 // Components
-@import "bootstrap/component-animations.less";
-@import "bootstrap/glyphicons.less";
-@import "bootstrap/dropdowns.less";
-@import "bootstrap/button-groups.less";
-@import "bootstrap/input-groups.less";
-@import "bootstrap/navs.less";
-@import "bootstrap/navbar.less";
-@import "bootstrap/breadcrumbs.less";
-@import "bootstrap/pagination.less";
-@import "bootstrap/pager.less";
-@import "bootstrap/labels.less";
-@import "bootstrap/badges.less";
-@import "bootstrap/jumbotron.less";
-@import "bootstrap/thumbnails.less";
-@import "bootstrap/alerts.less";
-@import "bootstrap/progress-bars.less";
-@import "bootstrap/media.less";
-@import "bootstrap/list-group.less";
-@import "bootstrap/panels.less";
-@import "bootstrap/wells.less";
-@import "bootstrap/close.less";
+@import "../thirdparty/bootstrap/less/component-animations.less";
+@import "../thirdparty/bootstrap/less/glyphicons.less";
+@import "../thirdparty/bootstrap/less/dropdowns.less";
+@import "../thirdparty/bootstrap/less/button-groups.less";
+@import "../thirdparty/bootstrap/less/input-groups.less";
+@import "../thirdparty/bootstrap/less/navs.less";
+@import "../thirdparty/bootstrap/less/navbar.less";
+@import "../thirdparty/bootstrap/less/breadcrumbs.less";
+@import "../thirdparty/bootstrap/less/pagination.less";
+@import "../thirdparty/bootstrap/less/pager.less";
+@import "../thirdparty/bootstrap/less/labels.less";
+@import "../thirdparty/bootstrap/less/badges.less";
+@import "../thirdparty/bootstrap/less/jumbotron.less";
+@import "../thirdparty/bootstrap/less/thumbnails.less";
+@import "../thirdparty/bootstrap/less/alerts.less";
+@import "../thirdparty/bootstrap/less/progress-bars.less";
+@import "../thirdparty/bootstrap/less/media.less";
+@import "../thirdparty/bootstrap/less/list-group.less";
+@import "../thirdparty/bootstrap/less/panels.less";
+@import "../thirdparty/bootstrap/less/wells.less";
+@import "../thirdparty/bootstrap/less/close.less";
 
 // Components w/ JavaScript
-@import "bootstrap/modals.less";
-@import "bootstrap/tooltip.less";
-@import "bootstrap/popovers.less";
-@import "bootstrap/carousel.less";
+@import "../thirdparty/bootstrap/less/modals.less";
+@import "../thirdparty/bootstrap/less/tooltip.less";
+@import "../thirdparty/bootstrap/less/popovers.less";
+@import "../thirdparty/bootstrap/less/carousel.less";
 
 // Utility classes
-@import "bootstrap/utilities.less";
-@import "bootstrap/responsive-utilities.less";
+@import "../thirdparty/bootstrap/less/utilities.less";
+@import "../thirdparty/bootstrap/less/responsive-utilities.less";
