--- a/app/less/style.less
+++ b/app/less/style.less
@@ -1,6 +1,6 @@
 // import bootstrap variables & mixins
-@import "bootstrap/variables.less";
-@import "bootstrap/mixins.less";
+@import "../thirdparty/bootstrap/less/variables.less";
+@import "../thirdparty/bootstrap/less/mixins.less";
 @import "sprite.less";
 
 // import customized variables & mixins
@@ -16,4 +16,51 @@ a .glyphicon {
   color: @text-color;
 }
 
+// animations
+@import "../thirdparty/yom-nganimate/animate.less";
+
 // import customized files
+
+
+// custom animation
+.ds-slide-right {
+  position:relative;
+  background:white;
+  border:1px solid black;
+  margin: 60px auto;
+  overflow:hidden;
+}
+ 
+.ds-slide-right > div {
+  padding:10px;
+}
+ 
+.ds-slide-right [ng-view].ng-enter, .ds-slide-right [ng-view].ng-leave {
+  -webkit-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+  -moz-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+  -o-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+  transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+ 
+  display:block;
+  width:100%;
+  border-left:1px solid black;
+ 
+  position:absolute;
+  top:0;
+  left:0;
+  right:0;
+  bottom:0;
+  padding:10px;
+}
+ 
+.ds-slide-right [ng-view].ng-enter {
+  left:100%;
+}
+.ds-slide-right [ng-view].ng-enter.ng-enter-active {
+  left:0;
+}
+ 
+.ds-slide-right [ng-view].ng-leave { }
+.ds-slide-right [ng-view].ng-leave.ng-leave-active {
+  left:-100%;
+}
