fix(user.html) : fix add button link

--- a/app/partials/user.html
+++ b/app/partials/user.html
@@ -25,7 +25,7 @@
     </tr>
   </table>
 
-  <a class="btn btn-primary" href="#/user/add">
+  <a class="btn btn-primary" href="#/user/edit/">
     <i class="glyphicon glyphicon-plus"/>
     Benutzer hinzufügen
   </a>
