--- a/app/partials/address.html
+++ b/app/partials/address.html
@@ -3,21 +3,26 @@
 <table class="table table-bordered table-hover table-striped">
 	<tr>
 		<th>#</th>
-		<th>Adresse</th>
-		<th>Ziel</th>
-		<th>Greylisting</th>
+		<th><i class="glyphicon glyphicon-refresh" /></th>
+    <th><i class="glyphicon glyphicon-eye-open" /></th>
+    <th>Adresse</th>
+    <th>Ziel</th>
 	</tr>
 	<tr ng-repeat="row in addresses">
 		<td>
 			<a class="glyph-link" href ng-click="edit(row)"><span class="glyphicon glyphicon-edit"></span></a>
 			<a class="glyph-link" href ng-click="delete(row)"><span class="glyphicon glyphicon-remove"></span></a>
 		</td>
+    <td><a href ng-click="toggleGreylisting( row );"><i class="glyphicon" ng-class="{
+      'glyphicon-ok': row.enable_greylisting,
+      'glyphicon-remove': !row.enable_greylisting
+    }"></i></a></td>
+    <td><a href ng-click="togglePolicyd( row )"><i class="glyphicon" ng-class="{
+      'glyphicon-ok': row.enable_policyd,
+      'glyphicon-remove': !row.enable_policyd
+    }"></i></a></td>
 		<td>{{row.source}}</td>
 		<td>{{row.destination}}</td>
-		<td><i class="glyphicon" ng-class="{
-			'glyphicon-ok': row.enable_greylisting,
-			'glyphicon-remove': !row.enable_greylisting
-		}"></i></td>
 	</tr>
 </table>
 
@@ -43,7 +48,7 @@
 	role="form"
 	name="addressForm"
 	class="form-horizontal"
-	ng-submit="save( address )"
+	ng-submit="submit( address )"
 >
 	<!-- SOURCE -->
 	<div class="form-group">
@@ -95,11 +100,26 @@
   </div>
 </div>
 
+<!-- POLICYD -->
+<div class="form-group">
+    <div class="col-lg-offset-2 col-lg-10">
+      <label class="checkbox">
+        <input type="checkbox" ng-model="address.enable_policyd" />
+        Policyd aktivieren
+      </label>
+  </div>
+</div>
+
+
 <!-- SUBMIT -->
 <div class="form-group">
     <div class="col-lg-offset-2 col-lg-10">
     	<button ng-disabled="!addressForm.$dirty || addressForm.$invalid " type="submit" class="btn btn-primary">Hinzufügen</button>
   </div>
 </div>
+
+<pre>{{ address | json }}</pre>
+<pre>{{ users | json }}</pre>
+<pre>{{ domains | json }}</pre>
 
 </form>
