--- a/app/less/style.less
+++ b/app/less/style.less
@@ -16,6 +16,10 @@ a.glyph-link .glyphicon {
   color: @text-color;
 }
 
+.sheer {
+  opacity: 0.3;
+}
+
 // animations
 @import "../thirdparty/yom-nganimate/animate.less";
 
