--- a/app/partials/blocked.html
+++ b/app/partials/blocked.html
@@ -1,15 +1,56 @@
-<h2>Blockierte Adressen</h2>
+<h2>Blockierte und erlaubte Adressen</h2>
+
+<div class="alert alert-info">
+  Hier können Email-Adressen explizit erlaubt oder blockiert werden.
+  <br /><br />
+  Wird eine
+  Adresse explizit erlaubt (<i class="glyphicon glyphicon-ok"/>), werden Emails
+  an diese Adresse immer angenommen. Sie durchwandern weder das Greylisting,
+  noch den Policy Dienst oder sonst eine Maßnahme zur Abwehr von Spam. Dies
+  ist auch für Adressen nützlich von denen man weiß, dass der Absender einen
+  fehlerhaft konfigurierten Mailserver nutzt und man einen REJECT durch den 
+  lokalen Mailserver vermeiden möchte.
+  <br /><br />
+  Wird eine Adresse explizit blockiert (<i class="glyphicon glyphicon-ban-circle"/>)
+  werden Emails an diese Adresse immer abgelehnt. Ohne vorherige Prüfung.
+  Dies ist z.B. nützlich für Adressen die in die Hand von Spambots gefallen 
+  sind und für die unter keinen Umständen noch Emails angenommen werden sollen.
+  <br /><br />
+  Eine weitere Form des Blockierens, ist das 'Verwerfen' (<i class="glyphicon glyphicon-trash"/>).
+  Im Unterschied zum blockieren, erhält der Absender bei dieser Options keine Rückmeldung
+  darüber, dass die Email nicht angenommen wurde. Der Mailserver tut so, als würde
+  er die Email annehmen, verwirft sie aber sofort. Der Absender geht dann davon aus,
+  die Email sei zugestellt worden.
+</div>
 
 <table class="table table-bordered table-hover table-striped">
   <tr>
     <th>#</th>
     <th>Adresse</th>
+    <th>Status</th>
   </tr>
   <tr ng-repeat="row in list">
     <td>
       <a href ng-click="delete(row)"><i class="glyphicon glyphicon-remove"></i></a>
     </td>
     <td>{{row.destination}}</td>
+    <td>
+      <a href
+        ng-click="set( row, 'OK' )"
+      ><i class="glyphicon glyphicon-ok"
+        ng-class="{ sheer: row.action !== 'OK' }"
+      ></i></a>
+
+      <a href ng-click="set( row, 'REJECT' )"
+      ><i class="glyphicon glyphicon-ban-circle"
+        ng-class="{ sheer: row.action !== 'REJECT' }"
+      ></i></a>
+
+      <a href ng-click="set( row, 'DISCARD' )"
+      ><i class="glyphicon glyphicon-trash"
+        ng-class="{ sheer: row.action !== 'DISCARD' }"
+      ></i></a>
+    </td>
   </tr>
 </table>
 
@@ -20,15 +61,15 @@
 <form
   role="form"
   name="blockedForm"
-  class="form-horizontal"
-  ng-submit="save( address )"
+  class=""
+  ng-submit="submit( address )"
 >
   <!-- DESTINATION -->
-  <div class="form-group">
+  <div class="row form-group">
     <label class="control-label col-lg-2" for="email">
       E-Mail Adresse
     </label>
-    <div class="col-lg-5 input-group">
+    <div class="col-lg-6 col-md-6 input-group">
       <input
         type="text"
         class="form-control"
@@ -39,7 +80,7 @@
         required
       /><span class="input-group-addon">@</span>
     </div>
-    <div class="col-lg-5">
+    <div class="col-lg-6 col-md-6">
       <select
         class="form-control"
         ng-model="address.domain"
@@ -47,17 +88,18 @@
         required
       ></select>
     </div>
-</div>
-
-<!-- SUBMIT -->
-<div class="form-group">
-    <div class="col-lg-offset-2 col-lg-10">
-      <button 
-        ng-disabled="!blockedForm.$dirty || blockedForm.$invalid "
-        type="submit"
-        class="btn btn-primary"
-      >Hinzufügen</button>
   </div>
-</div>
+
+  <!-- SUBMIT -->
+  <div class="form-group row">
+      <div class="col-lg-12 col-md-12">
+        <button ng-click="" type="button" class="btn btn-danger">Abbrechen</button>
+        <button 
+          ng-disabled="!blockedForm.$dirty || blockedForm.$invalid "
+          type="submit"
+          class="btn btn-primary"
+        >Hinzufügen</button>
+    </div>
+  </div>
 
 </form>
