--- a/app/partials/blocked.html
+++ b/app/partials/blocked.html
@@ -69,6 +69,7 @@
     <label class="control-label col-lg-2" for="email">
       E-Mail Adresse
     </label>
+    <div class="clearfix"></div>
     <div class="col-lg-6 col-md-6 input-group">
       <input
         type="text"
