chore(angular.js)
fixes and adjustments needed for angular.js 1.2.0

--- a/app/less/style.less
+++ b/app/less/style.less
@@ -12,6 +12,10 @@
 
 body { padding-top: 70px; }
 
+// [ng-hide] {
+//   display: none;
+// }
+
 a.glyph-link .glyphicon {
   color: @text-color;
 }
