--- a/app/partials/domain.html
+++ b/app/partials/domain.html
@@ -43,8 +43,8 @@
 	</div>
 	<div class="form-group">
 		<div class="col-lg-5 col-lg-offset-2">
-			<button ng-show="dom._update" type="submit" class="btn btn-primary">Aktualisieren</button>
-			<button ng-hide="dom._update" type="submit" class="btn btn-primary">Hinzufügen</button>
+			<button ng-show="dom.meta.update" type="submit" class="btn btn-primary">Aktualisieren</button>
+			<button ng-hide="dom.meta.update" type="submit" class="btn btn-primary">Hinzufügen</button>
 		</div>
 	</div>
 </form>
