--- a/app/partials/blocked.html
+++ b/app/partials/blocked.html
@@ -77,7 +77,8 @@
         placeholder="Alias"
         name="alias"
         ng-model="address.alias"
-        ng-pattern="/^([a-z0-9-\.]+|\*)$/"
+        ng-change="magicAliasEdit( address )"
+        ng-model-instant
         required
       /><span class="input-group-addon">@</span>
     </div>
