refactor whole app to use gulp/browerify instead of grunt/requirejs

--- a/app/partials/blocked.html
+++ b/app/partials/blocked.html
@@ -65,8 +65,7 @@
   ng-submit="submit( address )"
 >
   <!-- DESTINATION -->
-  <div class="row form-group">
-    <label class="control-label col-lg-2" for="email">
+  <div class="row form-group">    <label class="control-label col-lg-2" for="email">
       E-Mail Adresse
     </label>
     <div class="clearfix"></div>
