thirdparty: add bootstrap-switch

--- a/app/less/bootstrap.less
+++ b/app/less/bootstrap.less
@@ -48,3 +48,6 @@
 // Utility classes
 @import "../thirdparty/bootstrap/less/utilities.less";
 @import "../thirdparty/bootstrap/less/responsive-utilities.less";
+
+
+@import "../thirdparty/bootstrap-switch/dist/css/bootstrap3/bootstrap-switch.less";
