--- a/app/less/style.less
+++ b/app/less/style.less
@@ -27,6 +27,20 @@ body { padding-top: 105px; }
   }
 }
 
+.navbar-main {
+  background-color: #2F4354;
+  a {
+    color: #fff;
+    &:hover {
+      
+    }
+  }
+  .nav > li > a:hover,
+  .nav > li > a:focus {
+    background-color: #2C3E4E;
+  }
+}
+
 // [ng-hide] {
 //   display: none;
 // }
