--- a/app/less/style.less
+++ b/app/less/style.less
@@ -3,6 +3,8 @@
 @import "../thirdparty/bootstrap/less/mixins.less";
 @import "sprite.less";
 
+@import "font-awesome.less";
+
 // import customized variables & mixins
 @import "variables.less";
 @import "mixins.less";
