--- a/app/less/style.less
+++ b/app/less/style.less
@@ -1,9 +1,11 @@
-// import bootstrap variables & mixins
-@import "../thirdparty/bootstrap/less/variables.less";
+// import bootswatch flatly theme
+@import "../thirdparty/bootswatch-flatly/variables.less";
+@import "../thirdparty/bootswatch-flatly/bootswatch.less";
+
 @import "../thirdparty/bootstrap/less/mixins.less";
-@import "sprite.less";
 
 @import "font-awesome.less";
+@import "sprite.less";
 
 // import customized variables & mixins
 @import "variables.less";
@@ -12,34 +14,23 @@
 // import bootstrap files
 @import "bootstrap.less";
 
-body { padding-top: 105px; }
+@import "../thirdparty/animate.css/animate.less";
+
+body { padding-top: 125px; }
 
 .ng-cloak {
   display: none;
 }
 
 .subnavbar {
-  top: 51px;
+  top: 61px;
+  background-color: @gray-lighter;
 
   .navbar-right li {
     margin-left: 5px;
   }
   .navbar-left li {
     margin-right: 5px;
-  }
-}
-
-.navbar-main {
-  background-color: #2F4354;
-  a {
-    color: #fff;
-    &:hover {
-      
-    }
-  }
-  .nav > li > a:hover,
-  .nav > li > a:focus {
-    background-color: #2C3E4E;
   }
 }
 
@@ -55,9 +46,25 @@ a.glyph-link .glyphicon {
   opacity: 0.3;
 }
 
-// animations
-@import "../thirdparty/yom-nganimate/animate.less";
+.headline-box {
+  margin-bottom: 10px;
+  margin-top: 20px;
+}
+
+.col-center {
+  text-align: center;
+}
+
+pre {
+  font-size: (@font-size-base + 5);
+}
 
 @import "contextmenu.less";
 
-// import customized files
+// link animate.css with angular
+.blocked-info.ng-hide {
+  .animation( bounceOutUp 0.5s );
+}
+
+
+
