--- a/app/less/variables.less
+++ b/app/less/variables.less
@@ -1,3 +1,3 @@
-@font-family-sans-serif:  Verdana, "Helvetica Neue", Helvetica, Arial, sans-serif;
-@font-family-serif:       Georgia, "Times New Roman", Times, serif;
-@font-family-monospace:   Monaco, Menlo, Consolas, "Courier New", monospace;
+@font-family-sans-serif:  "Open Sans", Verdana, "Helvetica Neue", Helvetica, Arial, sans-serif;
+//@font-family-serif:       Georgia, "Times New Roman", Times, serif;
+@font-family-monospace:   'Source Code Pro', 'Consolas', Monaco, Menlo, Consolas, "Courier New", monospace;
